Set a max-width to prevent advanced search scope box from overflow

--- a/dspace-xmlui/dspace-xmlui-webapp/src/main/webapp/static/css/osukb_base.sass
+++ b/dspace-xmlui/dspace-xmlui-webapp/src/main/webapp/static/css/osukb_base.sass
@@ -1294,6 +1294,9 @@ ul.pagination-links
 select#aspect_submission_submit_SelectCollectionStep_field_handle
   max-width: 250px
 
+select#aspect_artifactbrowser_AdvancedSearch_field_scope
+  max-width: 500px
+
 @media print
   html
     font-size: 100%
